@@ -13,12 +13,12 @@
 the MS-DOS ``operating system'' (also known as ``MS-DOG'').
 @iftex
 Information about Emacs and Microsoft's current operating system
-Windows (also known as ``Losedows) is in the main Emacs manual
+Windows (also known as ``Losedows'') is in the main Emacs manual
 (@pxref{Microsoft Systems,,, emacs, the Emacs Manual}).
 @end iftex
 @ifnottex
 Information about peculiarities common to MS-DOS and Microsoft's
-current operating systems Windows (also known as ``Losedows) is in
+current operating systems Windows (also known as ``Losedows'') is in
 @ref{Microsoft Windows}.
 @end ifnottex
 
